// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render ActualCheckbox 1`] = `
.c0 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 50%;
  z-index: 2;
  opacity: 0;
  width: 30px;
  height: 30px;
}

<input
  className="c0"
  type="checkbox"
/>
`;

exports[`Checkbox should render Checkbox 1`] = `
<Styled(styled.div)
  align="center"
>
  <styled.div>
    <styled.input />
    <styled.div />
  </styled.div>
</Styled(styled.div)>
`;

exports[`Checkbox should render CheckboxContainer 1`] = `
.c0 {
  position: relative;
  width: 30px;
  height: 30px;
}

<div
  className="c0"
/>
`;

exports[`Checkbox should render VisualCheckbox 1`] = `
.c0 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 50%;
  z-index: 1;
  border: 2px solid #e6e6e6;
  background: #fefefe;
}

<div
  className="c0"
/>
`;
